Maths fixes: Fundamentals of CompSci

--- a/notebooks/b_coding/Fundamentals of Computer Science/2_Recursion.ipynb
+++ b/notebooks/b_coding/Fundamentals of Computer Science/2_Recursion.ipynb
@@ -47,9 +47,9 @@
    "source": [
     "Usually, a recursively defined function has two basic building blocks:\n",
     "\n",
-    "1) Base case (cases): Which are used for specific (finite) subsets of possible inputs. In the example, this will be when \\\\(n=0\\\\) or \\\\(n=1\\\\). In these cases, the function should not refer to itself.\n",
+    "1) Base case (cases): Which are used for specific (finite) subsets of possible inputs. In the example, this will be when $n=0$ or $n=1$. In these cases, the function should not refer to itself.\n",
     "\n",
-    "2) Recursive case (cases): This case builds on the *smaller* version of the same problem. In this case, we are decrementing the value of \\\\(n\\\\) before calling the function again.\n",
+    "2) Recursive case (cases): This case builds on the *smaller* version of the same problem. In this case, we are decrementing the value of $n$ before calling the function again.\n",
     "\n",
     "The broad idea that recursive cases should assure that the function reaches one of the base cases."
    ]
@@ -93,7 +93,7 @@
    "metadata": {},
    "source": [
     "______________\n",
-    "* **Fibonacci Sequence** To compute the \\\\(nth\\\\) term of the Fibonacci, we can utilise one of its definitions as in the code below: "
+    "* **Fibonacci Sequence** To compute the $n$-th term of the Fibonacci, we can utilise one of its definitions as in the code below: "
    ]
   },
   {
@@ -130,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**REMARK**: This is a very inefficient solution. As you can spot, each `fib` call leads to two `fib` calls (unless it reaches a base case). This solution is of \\\\(O(2^n)\\\\), which is very slow. We can use [Dynamic Programming](LINK) to speed it up."
+    "**REMARK**: This is a very inefficient solution. As you can spot, each `fib` call leads to two `fib` calls (unless it reaches a base case). This solution is of $O(2^n)$, which is very slow. We can use [Dynamic Programming](LINK) to speed it up."
    ]
   },
   {
@@ -152,7 +152,7 @@
     "\n",
     "The solution is likely one of the most beautiful recursive procedures:\n",
     "\n",
-    "We are starting with \\\\(n\\\\) disks on the **source** rod and want to move them to the **target** rod, with the help of the **spare** rod. The procedure is as follows:\n",
+    "We are starting with $n$ disks on the **source** rod and want to move them to the **target** rod, with the help of the **spare** rod. The procedure is as follows:\n",
     "\n",
     "Base Case:\n",
     "\n",
@@ -160,11 +160,11 @@
     "\n",
     "Recursive case:\n",
     "\n",
-    "1) Move \\\\(n-1\\\\) disks from the **source** the the **spare** by the *main solving procedure*. This leaves disk \\\\(n\\\\) on top of the **source** rod. \n",
+    "1) Move $n-1$ disks from the **source** the the **spare** by the *main solving procedure*. This leaves disk $n$ on top of the **source** rod. \n",
     "\n",
-    "2) Move the \\\\(n\\\\) disk from the **source** to the **target**.\n",
+    "2) Move the $n$ disk from the **source** to the **target**.\n",
     "\n",
-    "3) Move \\\\(n-1\\\\) disks from **spare** to the **source** by the *main solving procedure*.\n",
+    "3) Move $n-1$ disks from **spare** to the **source** by the *main solving procedure*.\n",
     "\n",
     "The code is as follows:"
    ]
@@ -390,9 +390,10 @@
    "metadata": {},
    "source": [
     "------------------\n",
-    "* **Babylonian Square Roots** A method to find an approximation of a square root of a number \\\\(S\\\\) is to pick a guess \\\\(x_0\\\\) and iteratively improve the guess by applying the formula \\\\(x_1 = (x_0 + S/x_0)\\\\). In the limit, this will give a square root. Unfortunately, we do not have time for an infinite number of operations, so return \\\\(x_1\\\\) when the condition is satisfied:\n",
+    "* **Babylonian Square Roots** A method to find an approximation of a square root of a number $S$ is to pick a guess $x_0$ and iteratively improve the guess by applying the formula $x_1 = (x_0 + S/x_0)$. In the limit, this will give a square root. Unfortunately, we do not have time for an infinite number of operations, so return $x_1$ when the condition is satisfied:\n",
     "\n",
-    "\\\\[\\frac{|x_1-x_0|}{x_1} < 0.01\\\\]"
+    "\n",
+    "$$\\frac{|x_1-x_0|}{x_1} < 0.01$$\n"
    ]
   },
   {
@@ -503,7 +504,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -517,7 +518,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
