--- a/notebooks/b_coding/Fundamentals of Computer Science/3_Divide_and_Conquer.ipynb
+++ b/notebooks/b_coding/Fundamentals of Computer Science/3_Divide_and_Conquer.ipynb
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This leads to the algorithm with \\\\(O(log(n))\\\\) complexity. On each iteration, we decrease the size of the search space by a factor of 2."
+    "This leads to the algorithm with $O(\\log(n))$ complexity. On each iteration, we decrease the size of the search space by a factor of 2."
    ]
   },
   {
@@ -86,7 +86,7 @@
    "metadata": {},
    "source": [
     "-------------------\n",
-    "* **Merge Sort** Is a very famous and ingenious example of Divide and Conquer approach. The aim is to sort an array. This could be done using the [Selection Sort](https://primer-computational-mathematics.github.io/book/b_coding/Fundamentals%20of%20Computer%20Science/1_Algorythmic_Complexity.html#algorythmic-complexity) which is \\\\(O(n^2)\\\\). Now, consider the following approach:\n",
+    "* **Merge Sort** Is a very famous and ingenious example of Divide and Conquer approach. The aim is to sort an array. This could be done using the [Selection Sort](https://primer-computational-mathematics.github.io/book/b_coding/Fundamentals%20of%20Computer%20Science/1_Algorythmic_Complexity.html#algorythmic-complexity) which is $O(n^2)$. Now, consider the following approach:\n",
     "\n",
     "1) The list is of length 0 or 1: it is already sorted.\n",
     "2) The list is longer: divide it into two lists of equal (almost equal) length and sort them *using the general method*. After those are returned, merge the two lists, so the resulting one is sorted. \n",
@@ -146,11 +146,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let us consider the time complexity of this solution. On the merge of the two halves of the initial list we are performing roughly \\\\(n\\\\) operations. Then, merge of the halves was a result of \\\\(2*n/2\\\\) operations. The pattern is as follows:\n",
+    "Now, let us consider the time complexity of this solution. On the merge of the two halves of the initial list we are performing roughly $n$ operations. Then, merge of the halves was a result of $2*n/2$ operations. The pattern is as follows:\n",
     "\n",
-    "\\\\[n+\\frac{n}{2}\\times2 + \\frac{n}{4}\\times4 + \\frac{n}{8}\\times8 +... = nlog(n)\\\\]\n",
     "\n",
-    "So this algorithm is \\\\(O(nlog(n))\\\\). This is a considerable improvement compared to the Selection Sort."
+    "$$n+\\frac{n}{2}\\times2 + \\frac{n}{4}\\times4 + \\frac{n}{8}\\times8 +... = n\\log(n)$$\n",
+    "\n",
+    "\n",
+    "So this algorithm is $O(n\\log(n))$. This is a considerable improvement compared to the Selection Sort."
    ]
   },
   {
@@ -158,7 +160,7 @@
    "metadata": {},
    "source": [
     "---------------\n",
-    "* **Closest two points on a plane** We are given a list of coordinates of points on a 2D Cartesian plane, find the minimum distance between any two points. The brute force solution is to check every pair of points in a list and find the minimum distance. This leads to \\\\(O(n^2)\\\\). However, there is a divide and conquer method which leads to a more efficient algorithm:\n",
+    "* **Closest two points on a plane** We are given a list of coordinates of points on a 2D Cartesian plane, find the minimum distance between any two points. The brute force solution is to check every pair of points in a list and find the minimum distance. This leads to $O(n^2)$. However, there is a divide and conquer method which leads to a more efficient algorithm:\n",
     "\n",
     "Base Case:\n",
     "\n",
@@ -166,17 +168,17 @@
     "\n",
     "Recursive case:\n",
     "\n",
-    "1) Sort the points by the \\\\(x\\\\)-coordinate (can be done in \\\\(O(nlog(n)\\\\)).\n",
+    "1) Sort the points by the $x$-coordinate (can be done in $O(nlog(n)$).\n",
     "\n",
     "2) Split the points into two groups (first and second half of the list).\n",
     "\n",
     "3) Find the minimum distance of those two sublists *by the same general procedure*.\n",
     "\n",
-    "4) Let \\\\(d_L\\\\) and \\\\(d_R\\\\) denote the minimum distances from the left and right half. Now take the points that are at maximum \\\\(min(d_L,d_R)\\\\) from the middle point. This can be done in \\\\(O(log(n))\\\\) as the points are sorted. We build an array `strip` from those points.\n",
+    "4) Let $d_L$ and $d_R$ denote the minimum distances from the left and right half. Now take the points that are at maximum $min(d_L,d_R)$ from the middle point. This can be done in $O(log(n))$ as the points are sorted. We build an array `strip` from those points.\n",
     "\n",
-    "5) Now sort the array `strip` by the \\\\(y\\\\) coordinate.\n",
+    "5) Now sort the array `strip` by the $y$ coordinate.\n",
     "\n",
-    "6) The tricky part: Intuition says that finding the minimum distance in the strip requires \\\\(O(n^2)\\\\) computation. However, let us notice the fact that each pair of points in one half is at minimum \\\\(min(d_L,d_R)\\\\) distance from each other. The only candidates for the new minimum distances are in the different halves. So we need to consider only the points in the `strip` which have a difference of \\\\(y\\\\) coordinate that is less than \\\\(min(d_L,d_R)\\\\)! It can be proven geometrically that for each point, we need to check at most 6 other points. Therefore this operation is \\\\(O(n)\\\\). Please have a look at the following diagram for digesting this step.\n",
+    "6) The tricky part: Intuition says that finding the minimum distance in the strip requires $O(n^2)$ computation. However, let us notice the fact that each pair of points in one half is at minimum $min(d_L,d_R)$ distance from each other. The only candidates for the new minimum distances are in the different halves. So we need to consider only the points in the `strip` which have a difference of $y$ coordinate that is less than $min(d_L,d_R)$! It can be proven geometrically that for each point, we need to check at most 6 other points. Therefore this operation is $O(n)$. Please have a look at the following diagram for digesting this step.\n",
     "\n",
     "7) Find the minimum distance in the strip and return it.\n",
     "\n",
@@ -271,13 +273,17 @@
     "Complexity analysis:\n",
     "Time complexity can be expressed as:\n",
     "\n",
-    "\\\\[T(n) = 2 \\times T(n/2) + O(log(n)) + O(nlog(n)) + O(n)\\\\]\n",
     "\n",
-    "Where the \\\\(O\\\\) terms correspond to creating the `stip` list, sorting the `strip` by \\\\(y\\\\) coordinates and finding the minimum distance in the strip. This can be simplified by considering only the most contributing term.\n",
+    "$$T(n) = 2 \\times T(n/2) + O(log(n)) + O(nlog(n)) + O(n)$$\n",
     "\n",
-    "\\\\[T(n) = 2 \\times T(n/2) + O(nlog(n))\\\\]\n",
     "\n",
-    "This recurrence relation can be solved in various ways (e.g using the [Master Theorem](https://en.wikipedia.org/wiki/Master_theorem_(analysis_of_algorithms))) and leads to \\\\(O(n(log(n))^2)\\\\)."
+    "Where the $O$ terms correspond to creating the `stip` list, sorting the `strip` by $y$ coordinates and finding the minimum distance in the strip. This can be simplified by considering only the most contributing term.\n",
+    "\n",
+    "\n",
+    "$$T(n) = 2 \\times T(n/2) + O(nlog(n))$$\n",
+    "\n",
+    "\n",
+    "This recurrence relation can be solved in various ways (e.g using the [Master Theorem](https://en.wikipedia.org/wiki/Master_theorem_(analysis_of_algorithms))) and leads to $O(n(log(n))^2)$."
    ]
   },
   {
@@ -291,7 +297,7 @@
     "\n",
     "`[1,2,3,4,5,6] -> [5,6,1,2,3,4]` is a rotation by 2.\n",
     "\n",
-    "Design an algorithm which finds the smallest element in \\\\(O(log(n))\\\\).\n",
+    "Design an algorithm which finds the smallest element in $O(log(n))$.\n",
     "\n",
     "**HINT**: The elements on the sides of the smallest element are both greater than it."
    ]
@@ -342,7 +348,7 @@
    "metadata": {},
    "source": [
     "-------------\n",
-    "* **Quick Sort** is probably the most widely used sorting algorithm in the world. In the worst case, it runs in \\\\(O(n^2)\\\\), but on average it is \\\\(O(nlogn)\\\\) with smaller constants than Merge Sort. The idea is as follows:\n",
+    "* **Quick Sort** is probably the most widely used sorting algorithm in the world. In the worst case, it runs in $O(n^2)$, but on average it is $O(nlogn)$ with smaller constants than Merge Sort. The idea is as follows:\n",
     "\n",
     "Base case:\n",
     "1) List of length 1 is sorted, return\n",
@@ -409,7 +415,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -423,7 +429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
