--- a/notebooks/b_coding/Fundamentals of Computer Science/4_Dynamic_Programming.ipynb
+++ b/notebooks/b_coding/Fundamentals of Computer Science/4_Dynamic_Programming.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "## Simple Examples\n",
     "\n",
-    "* **Dynamic Fibonacci** If you have read the section about [recursion](https://primer-computational-mathematics.github.io/book/b_coding/Fundamentals%20of%20Computer%20Science/2_Recursion.html#recursion) you probably know that the basic implementation for generating Fibonacci numbers is very inefficient (\\\\(O(2^n)\\\\)!). Now, as we generate the next numbers in the Fibonacci sequence, we will remember them for further use. The *trade-off between memory and time* is dramatic in this case. Compare the two versions of the function:"
+    "* **Dynamic Fibonacci** If you have read the section about [recursion](https://primer-computational-mathematics.github.io/book/b_coding/Fundamentals%20of%20Computer%20Science/2_Recursion.html#recursion) you probably know that the basic implementation for generating Fibonacci numbers is very inefficient ($O(2^n)$!). Now, as we generate the next numbers in the Fibonacci sequence, we will remember them for further use. The *trade-off between memory and time* is dramatic in this case. Compare the two versions of the function:"
    ]
   },
   {
@@ -74,19 +74,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The time difference is enormous! As you can probably spot, `dynamicFib` is \\\\(O(n)\\\\)! With the use of three integer variables (`prevFib`, `prevPrevFib` and `temp`) we brought exponential time complexity down to linear. How did it happen? Let us now depict the work done by `fib(5)` on a graph:\n",
+    "The time difference is enormous! As you can probably spot, `dynamicFib` is $O(n)$! With the use of three integer variables (`prevFib`, `prevPrevFib` and `temp`) we brought exponential time complexity down to linear. How did it happen? Let us now depict the work done by `fib(5)` on a graph:\n",
     "\n",
     "```{figure} algo_images/FibTree.png\n",
     ":width: 60%\n",
     "```\n",
     "\n",
-    "Wow! This is quite a tree! However, the worst feature is that many of the nodes are repeated (e.g. node \\\\(2\\\\) appears 3 times). These repeated results which are constantly recomputed bring us to the exponential complexity. Consider the dynamic solution graph:\n",
+    "Wow! This is quite a tree! However, the worst feature is that many of the nodes are repeated (e.g. node $2$ appears 3 times). These repeated results which are constantly recomputed bring us to the exponential complexity. Consider the dynamic solution graph:\n",
     "\n",
     "```{figure} algo_images/FibDyn.png\n",
     ":width: 10%\n",
     "```\n",
     "\n",
-    "Now, the number of nodes grows linearly with \\\\(n\\\\). We have `merged` the subproblems to avoid redundancy."
+    "Now, the number of nodes grows linearly with $n$. We have `merged` the subproblems to avoid redundancy."
    ]
   },
   {
@@ -168,12 +168,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is the time complexity of this algorithm? Based on the nested loop we can deduce that it is \\\\(O(n^2)\\\\). Quite an improvement!\n",
+    "What is the time complexity of this algorithm? Based on the nested loop we can deduce that it is $O(n^2)$. Quite an improvement!\n",
     "\n",
     "--------\n",
     "### Space Complexity\n",
     "\n",
-    "We usually do not concern ourselves with the amount of memory a program utilises. Dynamic programs are an exception to this rule. The amount of memory they use can be a limiting factor for some machines, so we need to take it into account. In the case of `dynamicFib` this was \\\\(O(1)\\\\) as we only needed to keep track of the last two Fibonacci numbers. In case of `shortestPathDownRight` we need to create a grid of size \\\\(n \\times n\\\\), so \\\\(O(n^2)\\\\). The notion of space complexity is very similar to time complexity, so we will not discuss it in depth.\n",
+    "We usually do not concern ourselves with the amount of memory a program utilises. Dynamic programs are an exception to this rule. The amount of memory they use can be a limiting factor for some machines, so we need to take it into account. In the case of `dynamicFib` this was $O(1)$ as we only needed to keep track of the last two Fibonacci numbers. In case of `shortestPathDownRight` we need to create a grid of size $n \\times n$, so $O(n^2)$. The notion of space complexity is very similar to time complexity, so we will not discuss it in depth.\n",
     "\n",
     "--------"
    ]
@@ -182,10 +182,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* **Cutting Rods** We are given a rod of integer length \\\\(n\\\\) and a list of length `prices` \\\\(n\\\\). The \\\\(i\\\\)th entry in the list corresponds to the profit we can get from selling the rod of length \\\\(i\\\\). How should we cut the rod so we maximise our profit?\n",
+    "* **Cutting Rods** We are given a rod of integer length $n$ and a list of length `prices` $n$. The $i$th entry in the list corresponds to the profit we can get from selling the rod of length $i$. How should we cut the rod so we maximise our profit?\n",
     "The key to our dynamic algorithm will be the observation that:\n",
     "\n",
-    "We cut the rod at position \\\\(k\\\\). Now we have a rod of lenght \\\\(k\\\\) and \\\\(n-k\\\\). Let us assume we know the maximum price for these two rods. Now we need to consider all the \\\\(0 \\leq k \\leq \\lfloor \\frac{n}{2} \\rfloor + 1\\\\) (the problem is symmetric so computing for \\\\(\\frac{n}{2} \\leq k\\\\) would be redundant. For \\\\(k=0\\\\) we just take `prices[n]`. The cutting introduces subproblems which are smaller than the initial problem and they are overlapping! Let us put this into code:\n"
+    "We cut the rod at position $k$. Now we have a rod of lenght $k$ and $n-k$. Let us assume we know the maximum price for these two rods. Now we need to consider all the $0 \\leq k \\leq \\lfloor \\frac{n}{2} \\rfloor + 1$ (the problem is symmetric so computing for $\\frac{n}{2} \\leq k$ would be redundant. For $k=0$ we just take `prices[n]`. The cutting introduces subproblems which are smaller than the initial problem and they are overlapping! Let us put this into code:\n"
    ]
   },
   {
@@ -276,7 +276,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Time complexity? For each \\\\(0\\leq i \\leq n \\\\) we need to consider \\\\(i\\\\) different cuts. This is the sum of arithmetic series so \\\\(O(n^2)\\\\). We memoize only the optimal solutions to subproblems, therefore space complexity is \\\\(O(n)\\\\)."
+    "Time complexity? For each $0\\leq i \\leq n $ we need to consider $i$ different cuts. This is the sum of arithmetic series so $O(n^2)$. We memoize only the optimal solutions to subproblems, therefore space complexity is $O(n)$."
    ]
   },
   {
@@ -287,7 +287,7 @@
     "\n",
     "All problems which can be tackled with the use of Dynamic Programming (DP) have two main features:\n",
     "\n",
-    "1) **Optimal substructure**: In broad terms, that solution to the problem can be formulated in terms of independent subproblems. Then you choose a solution/combination of optimal solutions to subproblems and show that this choice leads to an optimal global solution. For example, for the `shortestPath` problem we choose between the optimal solution to the tile above and tile to the left. For the rod problem, we choose between all possible \\\\(n\\\\) cuts of a rod and assume we have solutions to the shorter rods.  \n",
+    "1) **Optimal substructure**: In broad terms, that solution to the problem can be formulated in terms of independent subproblems. Then you choose a solution/combination of optimal solutions to subproblems and show that this choice leads to an optimal global solution. For example, for the `shortestPath` problem we choose between the optimal solution to the tile above and tile to the left. For the rod problem, we choose between all possible $n$ cuts of a rod and assume we have solutions to the shorter rods.  \n",
     "\n",
     "2) **Overlapping subproblems**: The subproblems which we split the main question into should repeat. Eliminating the need to recompute the subproblems (by memoising them) should speed up our algorithm. For example, `dynamicFib` used two variables to keep the results of computing previous Fibonacci numbers."
    ]
@@ -313,7 +313,7 @@
    "source": [
     "## Advanced Examples\n",
     "\n",
-    "* **0-1 Knapsack** The problem is about a backpack (knapsack) of an integer volume \\\\(S\\\\), we are given lists `spaces` and `vals` which correspond to the size and value of the objects we might want to pack. The trick is to pack the objects of the highest accumulate value which fit into the backpack. We will consider prefixes of the `sizes` list in order of length and put the intermediate results in a table. Compare the bottom-up and memoized approaches:  "
+    "* **0-1 Knapsack** The problem is about a backpack (knapsack) of an integer volume $S$, we are given lists `spaces` and `vals` which correspond to the size and value of the objects we might want to pack. The trick is to pack the objects of the highest accumulate value which fit into the backpack. We will consider prefixes of the `sizes` list in order of length and put the intermediate results in a table. Compare the bottom-up and memoized approaches:  "
    ]
   },
   {
@@ -430,7 +430,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this case, the memoized approach is the fastest as it does not usually require to consider all `(n,W)` pairs. However, both bottom-up and memoized approach have space (and time) complexity of \\\\(O(nS)\\\\). The brute force has time complexity of \\\\(O(2^n)\\\\), where \\\\(n\\\\) is the length of the `sizes` list."
+    "In this case, the memoized approach is the fastest as it does not usually require to consider all `(n,W)` pairs. However, both bottom-up and memoized approach have space (and time) complexity of $O(nS)$. The brute force has time complexity of $O(2^n)$, where $n$ is the length of the `sizes` list."
    ]
   },
   {
@@ -440,7 +440,7 @@
     "-------------\n",
     "* **Scheduling** With all the chaos that COVID caused universities are going fully remote. The head of your department asked the lecturers to send the timeslots in which they can do lectures. This is a list `timeslots` which consist of pairs of integers -  the start and end of the timeslot. If timeslots overlap, then we choose only one of them. Lectures can start at the same time the previous lecture finished. You aim to pick the subset of `timeslots` which assures that the sum of teaching hours is maximum. Return the maximum number of hours.\n",
     "\n",
-    "The question is similar to the previous one. We are given a list of items (`timeslots`) and need to come up with an optimisation. The value of each subset is the sum of hours of its elements. To speed things up in later stages, we will sort the timeslots by the ending time. This is done in \\\\(O(nlog(n))\\\\). We will then consider the prefixes of the sorted array and memoize optimal results. `memo[n]` will store the maximum number of hours from the prefix of `n` length."
+    "The question is similar to the previous one. We are given a list of items (`timeslots`) and need to come up with an optimisation. The value of each subset is the sum of hours of its elements. To speed things up in later stages, we will sort the timeslots by the ending time. This is done in $O(n\\log(n))$. We will then consider the prefixes of the sorted array and memoize optimal results. `memo[n]` will store the maximum number of hours from the prefix of `n` length."
    ]
   },
   {
@@ -544,7 +544,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Time complexity of this solution is \\\\(O(nlog(n))\\\\). Why?"
+    "Time complexity of this solution is $O(n\\log(n))$. Why?"
    ]
   },
   {
@@ -552,7 +552,7 @@
    "metadata": {},
    "source": [
     "## Exercises\n",
-    "* **Tiling problem** You are given a \\\\(2 \\times n\\\\) board and \\\\(2 \\times 1\\\\) tiles. Count the number of ways the tiles can be arranged (horizontally and vertically) on the board.\n",
+    "* **Tiling problem** You are given a $2 \\times n$ board and $2 \\times 1$ tiles. Count the number of ways the tiles can be arranged (horizontally and vertically) on the board.\n",
     "\n",
     "**HINT**: You have seen this algorithm before."
    ]
@@ -564,9 +564,11 @@
     "```{admonition} Answer\n",
     ":class: dropdown\n",
     "\n",
-    "Consider the end of the board. There are two cases, we can either have to fill in a \\\\(2 \\times 2\\\\) subboard or \\\\(1 \\times 2\\\\) subboard. We assume that the rest of the board is already covered and this is the same problem but smaller. There are two ways of arranging tiles on the \\\\(2 \\times 2\\\\) board and one way to do this on \\\\(1 \\times 2\\\\) board. Watch out though! The case in which we place tiles vertically on the \\\\(2 \\times 2\\\\) board covers some of the cases when we fill \\\\(1 \\times 2\\\\). Therefore we should ignore it. The final formula is as follow:\n",
+    "Consider the end of the board. There are two cases, we can either have to fill in a $2 \\times 2$ subboard or $1 \\times 2$ subboard. We assume that the rest of the board is already covered and this is the same problem but smaller. There are two ways of arranging tiles on the $2 \\times 2$ board and one way to do this on $1 \\times 2$ board. Watch out though! The case in which we place tiles vertically on the $2 \\times 2$ board covers some of the cases when we fill $1 \\times 2$. Therefore we should ignore it. The final formula is as follow:\n",
     "\n",
-    "\\\\[ count[n] = count[n-1] + count[n-2] \\\\]\n",
+    "\n",
+    "$$ count[n] = count[n-1] + count[n-2] $$\n",
+    "\n",
     "\n",
     "That is Fibonacci numbers. \n",
     "```"
@@ -577,7 +579,7 @@
    "metadata": {},
    "source": [
     "------------\n",
-    "* **Maximum sum subarray** You are given an array with \\\\(1\\\\) and \\\\(-1\\\\) elements only. Find the array of the maximum sum in \\\\(O(n)\\\\). Return this maximal sum. E.g. [-1,1,1,-1,1,1,1,-1] -> 4.\n",
+    "* **Maximum sum subarray** You are given an array with $1$ and $-1$ elements only. Find the array of the maximum sum in $O(n)$. Return this maximal sum. E.g. [-1,1,1,-1,1,1,1,-1] -> 4.\n",
     "\n",
     "**HINT**: Consider the sums of prefixes of the array."
    ]
@@ -682,7 +684,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -696,7 +698,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
