--- a/notebooks/b_coding/Fundamentals of Computer Science/7_Graph_Algorithms.ipynb
+++ b/notebooks/b_coding/Fundamentals of Computer Science/7_Graph_Algorithms.ipynb
@@ -17,11 +17,11 @@
     "## Graph\n",
     "``` {index} Graph\n",
     "```\n",
-    "In broad terms. A graph \\\\((V,E)\\\\) is an abstract structure consisting of nodes (*vertices*) and edges connecting some of them. Graphs can be directed or undirected which means that their edges can be traversed in one or both directions. Graphs can be unweighted or not, their edges can have assigned weights. There are several ways of representing graphs in computers, two of which are:\n",
+    "In broad terms. A graph $(V,E)$ is an abstract structure consisting of nodes (*vertices*) and edges connecting some of them. Graphs can be directed or undirected which means that their edges can be traversed in one or both directions. Graphs can be unweighted or not, their edges can have assigned weights. There are several ways of representing graphs in computers, two of which are:\n",
     "\n",
-    "* Adjecency matrix \\\\(A\\\\): Which are matrices consisting of \\\\(1\\\\) and \\\\(0\\\\). A \\\\(1\\\\) at a coordinates \\\\((i,j)\\\\) means that there is an edge from node \\\\(i\\\\) to node \\\\(j\\\\). For undirected graphs \\\\(A[i,j]\\\\) = \\\\(A[j,i]\\\\). Adjacency matricex are a compact way of representing *dense* graphs where the number of edges is close to \\\\(|V|^2\\\\). \n",
+    "* Adjecency matrix $A$: Which are matrices consisting of $1$ and $0$. A $1$ at a coordinates $(i,j)$ means that there is an edge from node $i$ to node $j$. For undirected graphs $A[i,j]$ = $A[j,i]$. Adjacency matricex are a compact way of representing *dense* graphs where the number of edges is close to $|V|^2$. \n",
     "\n",
-    "* Adjacency list \\\\(L\\\\): which is a 2D array where an entry \\\\(L[i]\\\\) is a list with the ids of nodes to which \\\\(i\\\\) is connected to. It is a space-efficient representation for *sparse* graphs where not many nodes are connected.\n",
+    "* Adjacency list $L$: which is a 2D array where an entry $L[i]$ is a list with the ids of nodes to which $i$ is connected to. It is a space-efficient representation for *sparse* graphs where not many nodes are connected.\n",
     "\n",
     "```{figure} algo_images/Graphs.png\n",
     ":width: 60%\n",
@@ -42,7 +42,7 @@
     "\n",
     "### Breadth-first search (BFS)\n",
     "\n",
-    "The name of this graph traversal stems from the way it visits the nodes. It starts at some arbitrarily chosen node and then visits all the nodes that are distance 1 away from it, then distance 2 etc. BFS will not visit a node that is distance \\\\(d+1\\\\) until it visits all nodes at a distance \\\\(d\\\\). When two nodes are equal distance from the first node, the choice is also arbitrary (we will go for the numerical order).\n",
+    "The name of this graph traversal stems from the way it visits the nodes. It starts at some arbitrarily chosen node and then visits all the nodes that are distance 1 away from it, then distance 2 etc. BFS will not visit a node that is distance $d+1$ until it visits all nodes at a distance $d$. When two nodes are equal distance from the first node, the choice is also arbitrary (we will go for the numerical order).\n",
     "\n",
     "<img src=\"https://upload.wikimedia.org/wikipedia/commons/4/46/Animated_BFS.gif\" width=\"40%\">\n",
     "\n",
@@ -273,7 +273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Time complexity of DFS is \\\\(O(|V|+|E|)\\\\). It can be used in the following problems:\n",
+    "Time complexity of DFS is $O(|V|+|E|)$. It can be used in the following problems:\n",
     "\n",
     "1) Detecting cycles\n",
     "\n",
@@ -291,7 +291,7 @@
     "## Minimum spanning tree (MST)\n",
     "```{index} Minimum spanning tree (MST)\n",
     "```\n",
-    "A *spanning tree* of a graph \\\\(G\\\\) is a subgraph of \\\\(G\\\\) that includes all its nodes. The concept is meaningful for connected graphs only (if the graph is not connected we are considering its *spanning forest*). The problem of MST is considered for weighted graphs \\\\((V,E\\\\) with \\\\(w\\\\) - a function that returns the weight of an edge in \\\\(E\\\\). A *minimum spanning tree* is one in which the sum of weights of the edges is minimal. Surprisingly, the problem can be solved by using a *greedy* approach. Here are two possible approaches:\n",
+    "A *spanning tree* of a graph $G$ is a subgraph of $G$ that includes all its nodes. The concept is meaningful for connected graphs only (if the graph is not connected we are considering its *spanning forest*). The problem of MST is considered for weighted graphs $(V,E$ with $w$ - a function that returns the weight of an edge in $E$. A *minimum spanning tree* is one in which the sum of weights of the edges is minimal. Surprisingly, the problem can be solved by using a *greedy* approach. Here are two possible approaches:\n",
     "\n",
     "### Kruskal's algorithm\n",
     "\n",
@@ -299,7 +299,7 @@
     "\n",
     "1) Create a single element set for every node.\n",
     "\n",
-    "2) Sort the edges in \\\\(E\\\\) by weight in non-decreasing order, put them in a priority queue.\n",
+    "2) Sort the edges in $E$ by weight in non-decreasing order, put them in a priority queue.\n",
     "\n",
     "3) Take the edge of least weight and if it connects elements from different sets, use it. Make the connected sets one (by setting the same group leader). \n",
     "\n",
@@ -366,7 +366,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Kruskal's algorithm runs in \\\\(O(|E|log|E|)\\\\) time, which is also \\\\(O(|E|log|V|)\\\\) as \\\\(|E| \\leq |V|^2\\\\). "
+    "Kruskal's algorithm runs in $O(|E|\\log|E|)$ time, which is also $O(|E|\\log|V|)$ as $|E| \\leq |V|^2$. "
    ]
   },
   {
@@ -377,7 +377,7 @@
     "\n",
     "Prim's algorithm is similar to Kruskal's but at each step, there is only one tree that grows. The idea is as follows:\n",
     "\n",
-    "1) Start at an arbitrary node in \\\\(G\\\\)\n",
+    "1) Start at an arbitrary node in $G$\n",
     "\n",
     "2) Take the minimum edge incident on one of the already considered nodes (that connects it to the node not previously seen). This way the tree expands.\n",
     "\n",
@@ -452,7 +452,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The algorithm runs in \\\\(O(|E|log|V|)\\\\) time. Why?"
+    "The algorithm runs in $O(|E|\\log|V|)$ time. Why?"
    ]
   },
   {
@@ -518,7 +518,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -532,7 +532,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
