--- a/notebooks/b_coding/Fundamentals of Computer Science/1_Algorithmic_Complexity.ipynb
+++ b/notebooks/b_coding/Fundamentals of Computer Science/1_Algorithmic_Complexity.ipynb
@@ -9,16 +9,18 @@
     "``` {index} Algorithmic complexity\n",
     "```\n",
     "\n",
-    "In order to make our programs efficient (or, at least, not horribly inefficient), we can consider how the execution time varies depending on the input size \\\\(n\\\\). Let us define a measure of this efficiency as a function \\\\( T(n)\\\\). Of course, the time it takes to execute a code will vary largely depending on the processor, compiler or disk speed. \\\\( T(n)\\\\) goes around this variance by measuring *asymptotic* complexity. In this case, only (broadly defined) *steps* will determine the time it takes to execute an algorithm."
+    "In order to make our programs efficient (or, at least, not horribly inefficient), we can consider how the execution time varies depending on the input size $n$. Let us define a measure of this efficiency as a function $ T(n)$. Of course, the time it takes to execute a code will vary largely depending on the processor, compiler or disk speed. $ T(n)$ goes around this variance by measuring *asymptotic* complexity. In this case, only (broadly defined) *steps* will determine the time it takes to execute an algorithm."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, say we want to add two \\\\(n\\\\)-bit binary digits. One way to do this is to go bit by bit and add the two. We can see that \\\\(n\\\\) operations are involved. \n",
-    "\\\\[T(n) = c*n\\\\]\n",
-    "where \\\\(c\\\\) is the time it takes to add two bits on a machine. On different machines, the value of \\\\(c\\\\) may vary, but the linearity of this function is the common factor. Our aim is to abstract away from the details of implementation and think about the fundamental usage of computing resources. "
+    "Now, say we want to add two $n$-bit binary digits. One way to do this is to go bit by bit and add the two. We can see that $n$ operations are involved. \n",
+    "\n",
+    "$$T(n) = c*n$$\n",
+    "\n",
+    "where $c$ is the time it takes to add two bits on a machine. On different machines, the value of $c$ may vary, but the linearity of this function is the common factor. Our aim is to abstract away from the details of implementation and think about the fundamental usage of computing resources. "
    ]
   },
   {
@@ -29,24 +31,40 @@
     "\n",
     "The mathematical definiton of this concept can be found [here](https://primer-computational-mathematics.github.io/book/c_mathematics/mathematical_notation/Big_O_notation.html). In simple terms, we say that:\n",
     "\n",
-    "\\\\[f(n) = O(g(n))\\\\] \n",
     "\n",
-    "if there exists \\\\(c>0\\\\) and \\\\(n_0>0\\\\) such that \n",
+    "$$f(n) = O(g(n))$$\n",
+    " \n",
     "\n",
-    "\\\\[f(n) \\leq c * g(n), \\quad \\text{for all} \\ n \\geq n_0.\\\\]\n",
+    "if there exists $c>0$ and $n_0>0$ such that \n",
     "\n",
-    "\\\\(g(n)\\\\) can be thought of as an *upper bound* of \\\\(f(n)\\\\) as \\\\(n \\to \\infty\\\\). In some publications *big Theta* notation is used. \\\\(\\Theta(n)\\\\) can be considered the *least upper bound*, in algorithm analysis we ofter use both notations interchangeably.\n",
+    "\n",
+    "$$f(n) \\leq c * g(n), \\quad \\text{for all} \\ n \\geq n_0.$$\n",
+    "\n",
+    "\n",
+    "$g(n)$ can be thought of as an *upper bound* of $f(n)$ as $n \\to \\infty$. In some publications *big Theta* notation is used. $\\Theta(n)$ can be considered the *least upper bound*, in algorithm analysis we ofter use both notations interchangeably.\n",
     "\n",
     "Here are a couple of examples:\n",
     "\n",
-    "\\\\[ 3n + 4 = O(n)\\\\]\n",
-    "\\\\[ n^2 + 17n = O(n^2)\\\\]\n",
-    "\\\\[2^n = O(2^n)\\\\]\n",
-    "\\\\[42 = O(1)\\\\]\n",
+    "\n",
+    "$$ 3n + 4 = O(n)$$\n",
+    "\n",
+    "\n",
+    "$$ n^2 + 17n = O(n^2)$$\n",
+    "\n",
+    "\n",
+    "$$2^n = O(2^n)$$\n",
+    "\n",
+    "\n",
+    "$$42 = O(1)$$\n",
+    "\n",
     "but also:\n",
     "\n",
-    "\\\\[log(n) = O(n)\\\\]\n",
-    "\\\\[n = O(n^2)\\\\]\n",
+    "\n",
+    "$$\\log(n) = O(n)$$\n",
+    "\n",
+    "\n",
+    "$$n = O(n^2)$$\n",
+    "\n",
     "\n",
     "We will now consider different time complexities of algorithms."
    ]
@@ -56,9 +74,9 @@
    "metadata": {},
    "source": [
     "----------------\n",
-    "### Constant time \\\\(O(1)\\\\)\n",
+    "### Constant time $O(1)$\n",
     "\n",
-    "An algorithm is said to run in *constant* time if its complexity is \\\\(O(1)\\\\). This is usually considered the *fastest* case (which is true but only in the *asymptotic* sense). No matter what the input size is, the program will take the same amount of time to terminate. Let us consider some examples:\n",
+    "An algorithm is said to run in *constant* time if its complexity is $O(1)$. This is usually considered the *fastest* case (which is true but only in the *asymptotic* sense). No matter what the input size is, the program will take the same amount of time to terminate. Let us consider some examples:\n",
     "\n",
     "* ```Hello World!```: "
    ]
@@ -158,7 +176,7 @@
    "metadata": {},
    "source": [
     "----------------\n",
-    "### Linear time \\\\(O(n)\\\\)\n",
+    "### Linear time $O(n)$\n",
     "\n",
     "This complexity appears in real-life problems much more frequently than constant time. The program is said to run in *linear* time if the time it takes is proportional to the input size:"
    ]
@@ -206,8 +224,8 @@
    "metadata": {},
    "source": [
     "----------------\n",
-    "### Quadratic time \\\\(O(n^2)\\\\)\n",
-    "The *quadratic* time complexity is also a very popular case. It often might not be the most efficient solution and can point to better complexities such as \\\\(O(n*log(n))\\\\). However, there are problems in which such traversal is necessary. "
+    "### Quadratic time $O(n^2)$\n",
+    "The *quadratic* time complexity is also a very popular case. It often might not be the most efficient solution and can point to better complexities such as $O(n*\\log(n))$. However, there are problems in which such traversal is necessary. "
    ]
   },
   {
@@ -267,7 +285,7 @@
     ":width: 60%\n",
     "```\n",
     "\n",
-    "If we calculate the sum of operations (arithmetic series) we get \\\\(\\frac{n*(n+1)}{2} = O(n^2)\\\\). Selection Sort is considered a rather inefficient sorting algorithm."
+    "If we calculate the sum of operations (arithmetic series) we get $\\frac{n*(n+1)}{2} = O(n^2)$. Selection Sort is considered a rather inefficient sorting algorithm."
    ]
   },
   {
@@ -312,7 +330,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When we want to add two \\\\(n \\times n\\\\) matrices, we have to perform the addition element-wise, therefore we perform \\\\(n^2\\\\) additions."
+    "When we want to add two $n \\times n$ matrices, we have to perform the addition element-wise, therefore we perform $n^2$ additions."
    ]
   },
   {
@@ -323,15 +341,15 @@
     "## Different complexities \n",
     "Apart from the three complexities above, there are many more which show up quite often. The most notable ones are (we will discuss some of them later):\n",
     "\n",
-    "1) Logarithmic \\\\(O(log(n))\\\\) - present in e.g. Binary Search. \n",
+    "1) Logarithmic $O(\\log(n))$ - present in e.g. Binary Search. \n",
     "\n",
-    "2) Loglinear \\\\(O(n*log(n))\\\\) - e.g. Merge Sort.\n",
+    "2) Loglinear $O(n*\\log(n))$ - e.g. Merge Sort.\n",
     "\n",
-    "3) Multi-variable \\\\(O(n*k)\\\\) - e.g. searching for a substring of length \\\\(k\\\\) in a string of length \\\\(n\\\\).\n",
+    "3) Multi-variable $O(n*k)$ - e.g. searching for a substring of length $k$ in a string of length $n$.\n",
     "\n",
-    "4) Exponential \\\\(O(a^n)\\\\), \\\\(a > 1\\\\) - this is bad.\n",
+    "4) Exponential $O(a^n)$, $a > 1$ - this is bad.\n",
     "\n",
-    "5) Factorial \\\\(O(n!)\\\\) - even worse (producing all permutations of a string)."
+    "5) Factorial $O(n!)$ - even worse (producing all permutations of a string)."
    ]
   },
   {
@@ -347,14 +365,14 @@
     "* Worst-case runtime complexity considers the maximum number of steps taken by the algorithm.\n",
     "* Average case runtime complexity is probably the most accurate measure of the performance of an algorithm and takes into account the behaviour of the program when fed with an *average* input.\n",
     "\n",
-    "In production, both worst and average runtime complexities are considered (imagine an algorithm with an average \\\\(O(n^2)\\\\) and worst-case \\\\(O(n!)\\\\) - that could be easily exploited!)"
+    "In production, both worst and average runtime complexities are considered (imagine an algorithm with an average $O(n^2)$ and worst-case $O(n!)$ - that could be easily exploited!)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us now perform an analysis on a simple search algorithm which finds the number \\\\(x\\\\) in a list \\\\(l\\\\)"
+    "Let us now perform an analysis on a simple search algorithm which finds the number $x$ in a list $l$"
    ]
   },
   {
@@ -384,13 +402,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our assumption is that \\\\(x\\\\) is in the list and that the probability that it is at a particular index is uniform.\n",
+    "Our assumption is that $x$ is in the list and that the probability that it is at a particular index is uniform.\n",
     "\n",
-    "1) Best-case: \\\\(O(1)\\\\) - in is the zeroth cell\n",
+    "1) Best-case: $O(1)$ - in is the zeroth cell\n",
     "\n",
-    "2) Worst-case: \\\\(O(n)\\\\) - have to go through the whole list\n",
+    "2) Worst-case: $O(n)$ - have to go through the whole list\n",
     "\n",
-    "3) Average case: \\\\(O(\\frac{n}{2}) = O(n)\\\\) - the element will be *somewhere in the middle*\n",
+    "3) Average case: $O(\\frac{n}{2}) = O(n)$ - the element will be *somewhere in the middle*\n",
     "\n",
     "In this case, we can predict that the program will run in linear time."
    ]
@@ -409,11 +427,11 @@
    "source": [
     "* **Which Big O** category do these functions fall into (least upper bound):\n",
     "\n",
-    "1) \\\\( 4n^3 + 2n\\\\)\n",
+    "1) $ 4n^3 + 2n$\n",
     "\n",
-    "2) \\\\(\\sum_{i=0}^{n} i^2\\\\)\n",
+    "2) $\\sum_{i=0}^{n} i^2$\n",
     "\n",
-    "3) \\\\(log(log(n))\\\\)\n",
+    "3) $\\log(\\log(n))$\n",
     "\n",
     "4) 34562"
    ]
@@ -425,13 +443,13 @@
     "```{admonition} Answers\n",
     ":class: dropdown\n",
     "\n",
-    "1) \\\\(O(n^3)\\\\)\n",
+    "1) $O(n^3)$\n",
     "\n",
-    "2) \\\\(O(n^3)\\\\)\n",
+    "2) $O(n^3)$\n",
     "\n",
-    "3) \\\\(O(log(log(n))\\\\)\n",
+    "3) $O(\\log(\\log(n))$\n",
     "\n",
-    "4) \\\\(O(1)\\\\)\n",
+    "4) $O(1)$\n",
     "\n",
     "```"
    ]
@@ -441,7 +459,7 @@
    "metadata": {},
    "source": [
     "------\n",
-    "* **Multiplying Matrices** We want to multiply two square matrices of side length \\\\(n\\\\) of the same size using the following code:"
+    "* **Multiplying Matrices** We want to multiply two square matrices of side length $n$ of the same size using the following code:"
    ]
   },
   {
@@ -488,9 +506,9 @@
     "```{admonition} Answer\n",
     ":class: dropdown\n",
     "        \n",
-    "The function `mulMatrix` in its innermost loop does two operations: one multiplication and one addition. It does this \\\\(n^3\\\\) times because there are three nested `for` loops, each one iterating `n` times.\n",
+    "The function `mulMatrix` in its innermost loop does two operations: one multiplication and one addition. It does this $n^3$ times because there are three nested `for` loops, each one iterating `n` times.\n",
     "        \n",
-    "Therefore \\\\(O(n^3)\\\\).\n",
+    "Therefore $O(n^3)$.\n",
     "\n",
     "```"
    ]
@@ -526,7 +544,7 @@
     "```{admonition} Answer\n",
     ":class: dropdown\n",
     "        \n",
-    "\\\\(O(n^2)\\\\)\n",
+    "$O(n^2)$\n",
     " \n",
     "```"
    ]
@@ -546,7 +564,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -560,7 +578,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
