--- a/notebooks/b_coding/Fundamentals of Computer Science/5_Greedy_Algorithms.ipynb
+++ b/notebooks/b_coding/Fundamentals of Computer Science/5_Greedy_Algorithms.ipynb
@@ -17,17 +17,17 @@
     "\n",
     "## Basic Examples\n",
     "\n",
-    "* **Greedy Scheduling** We are given a list `timeslots` with each element being a tuple \\\\((s,f)\\\\) where \\\\(s\\\\) is the starting time of the event and \\\\(f\\\\) its the finish time. We need to choose a subset of non-overlapping `timeslots` that has the most elements. Return the number of elements in that subset.\n",
+    "* **Greedy Scheduling** We are given a list `timeslots` with each element being a tuple $(s,f)$ where $s$ is the starting time of the event and $f$ its the finish time. We need to choose a subset of non-overlapping `timeslots` that has the most elements. Return the number of elements in that subset.\n",
     "\n",
-    "First, let us assume that `timeslots` is sorted by \\\\(f\\\\) (non-decreasing).\n",
+    "First, let us assume that `timeslots` is sorted by $f$ (non-decreasing).\n",
     "\n",
-    "Let us show that the problem has an optimal substructure. Let \\\\(S_{ij}\\\\) denote a set of events which start after event \\\\(a_i\\\\) and finish before the event \\\\(a_j\\\\) and \\\\(A_{ij}\\\\) be the optimal subset of \\\\(S_{ij}\\\\). We can see that \\\\(A_{ij} = A_{ik} + a_k + A_{kj}\\\\) for \\\\(i\\leq k \\leq j\\\\). Now \\\\(A_{ik}\\\\) is the solution for  \\\\(S_{ik}\\\\) and \\\\(A_{kj}\\\\) solves \\\\(S_{kj}\\\\). These are two independent subproblems, so the problem has an optimal substructure.\n",
+    "Let us show that the problem has an optimal substructure. Let $S_{ij}$ denote a set of events which start after event $a_i$ and finish before the event $a_j$ and $A_{ij}$ be the optimal subset of $S_{ij}$. We can see that $A_{ij} = A_{ik} + a_k + A_{kj}$ for $i\\leq k \\leq j$. Now $A_{ik}$ is the solution for  $S_{ik}$ and $A_{kj}$ solves $S_{kj}$. These are two independent subproblems, so the problem has an optimal substructure.\n",
     "\n",
     "Now, you can have a thought about how, based on this information, one can implement Dynamic solution. However, let us jump straight into greedy:\n",
     "\n",
-    "Our hypothesis is to always choose the task that ends the earliest. We will show that (some optimal) \\\\(A_{ij}\\\\) always contains the earliest ending task \\\\(a_m\\\\) of \\\\(S_{ij}\\\\). Then, inductively, we know that this leads to a globally optimal arrangement. \n",
+    "Our hypothesis is to always choose the task that ends the earliest. We will show that (some optimal) $A_{ij}$ always contains the earliest ending task $a_m$ of $S_{ij}$. Then, inductively, we know that this leads to a globally optimal arrangement. \n",
     "\n",
-    "**Proof**: Let \\\\(a_n\\\\) be the earliest ending task in \\\\(A_{ij}\\\\) (does not have to be the same as \\\\(a_m\\\\)). If \\\\(a_n = a_m\\\\) then we are done. Otherwise, it is possible to swap \\\\(a_n\\\\) with \\\\(a_m\\\\) keeping \\\\(A_{ij}\\\\) valid. As \\\\(A_{ij}\\\\) was optimal, such swap still makes it optimal. \n",
+    "**Proof**: Let $a_n$ be the earliest ending task in $A_{ij}$ (does not have to be the same as $a_m$). If $a_n = a_m$ then we are done. Otherwise, it is possible to swap $a_n$ with $a_m$ keeping $A_{ij}$ valid. As $A_{ij}$ was optimal, such swap still makes it optimal. \n",
     "\n",
     "Have a look at the following code:"
    ]
@@ -90,19 +90,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The time complexity is \\\\(O(nlog(n))\\\\) but this is due to sorting the events. If the events were sorted initially it would be \\\\(O(n)\\\\).\n",
+    "The time complexity is $O(n\\log(n))$ but this is due to sorting the events. If the events were sorted initially it would be $O(n)$.\n",
     "\n",
     "------------------\n",
-    "* **Cover a set of points with given length intervals** You are given a list `points` of \\\\(x\\\\)-coordinates of points and `l` - the length of the interval. How many intervals do we need to cover the points?\n",
+    "* **Cover a set of points with given length intervals** You are given a list `points` of $x$-coordinates of points and `l` - the length of the interval. How many intervals do we need to cover the points?\n",
     "\n",
     "\n",
-    "Let \\\\(A_{ij}\\\\) denote the optimal set of intervals that cover the points. Take the element from this set \\\\((s_k,e_k)\\\\) then \\\\(A_{ij} = A_{ik} + a_k + A_{kj}\\\\). Similair analysis as in the previous example leads to the conclusion that the problem has an optimal substructure.\n",
+    "Let $A_{ij}$ denote the optimal set of intervals that cover the points. Take the element from this set $(s_k,e_k)$ then $A_{ij} = A_{ik} + a_k + A_{kj}$. Similair analysis as in the previous example leads to the conclusion that the problem has an optimal substructure.\n",
     "\n",
     "Now let us show that greedy choices lead to the optimal solution:\n",
     "\n",
     "Let us sort the points in the non-decreasing order. We insert an interval where the first begins (an can cover other points) and continue such insertion until we are done.\n",
     "\n",
-    "Now, consider the optimal solution \\\\(A_{ij}\\\\) and its first interval. If it does start where the first point, we can replace it with such interval and the solution remains optimal. Done!\n",
+    "Now, consider the optimal solution $A_{ij}$ and its first interval. If it does start where the first point, we can replace it with such interval and the solution remains optimal. Done!\n",
     "\n",
     "Here is the code implementation:"
    ]
@@ -133,7 +133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similarly depending whether the `points` are sorted we have \\\\(O(nlog(n))\\\\) or \\\\(O(n)\\\\).\n",
+    "Similarly depending whether the `points` are sorted we have $O(nlog(n))$ or $O(n)$.\n",
     "\n",
     "## Conditions needed for Greedy Solution\n",
     "\n",
@@ -156,13 +156,15 @@
     "\n",
     "* **Fractional Knapsack** You are given two lists `vals` and `weights` as well as an integer `W` - the total weight of a backpack. You are allowed to take any fraction of any item in the list so that the sum of their weights is no bigger than `W`. All numbers in the input are positive. Return the maximum possible value:\n",
     "\n",
-    "**Optimal substructure** Let \\\\(val(i, w_j,w)\\\\) denote the *maixmum* value we can get by taking \\\\(w_j \\leq w_i \\\\) of item  \\\\(i\\\\) (\\\\(w_i\\\\) is the weight of the object), considering the object up to the \\\\(i\\\\)th. \\\\(w\\\\) is the weight left in the Knapsack. The solution uses the following recursion:\n",
+    "**Optimal substructure** Let $val(i, w_j,w)$ denote the *maixmum* value we can get by taking $w_j \\leq w_i $ of item  $i$ ($w_i$ is the weight of the object), considering the object up to the $i$th. $w$ is the weight left in the Knapsack. The solution uses the following recursion:\n",
     "\n",
-    "\\\\[val(i, w_j,W) = max(val(i+1, w_j,w - w_j) + w_j \\times \\frac{v_i}{w_i}, val(i+1, w_j,w))\\\\]\n",
     "\n",
-    "**Greedy choices lead to optimal solution** We will be taking the aveliable items of the greatest *density* \\\\(\\frac{v_i}{w_i}\\\\).\n",
+    "$$val(i, w_j,W) = max(val(i+1, w_j,w - w_j) + w_j \\times \\frac{v_i}{w_i}, val(i+1, w_j,w))$$\n",
     "\n",
-    "Imagine a sequence of the optimal \\\\(w_j\\\\)s. Let us take such item \\\\(k\\\\) that \\\\(\\frac{v_k}{w_k}\\\\) is no smaller than any such ratio in the sequence. If such item is already in the sequence, we check if the weight taken is maximum possible, if not we can improve or keep the result equal. Since the solution is optimal we cannot improve. If the item is not, we can replace with other items and improve or stay the same, again the solution is optimal so the result can only stay the same. Therefore such replacement will result in an optimal solution:"
+    "\n",
+    "**Greedy choices lead to optimal solution** We will be taking the aveliable items of the greatest *density* $\\frac{v_i}{w_i}$.\n",
+    "\n",
+    "Imagine a sequence of the optimal $w_j$s. Let us take such item $k$ that $\\frac{v_k}{w_k}$ is no smaller than any such ratio in the sequence. If such item is already in the sequence, we check if the weight taken is maximum possible, if not we can improve or keep the result equal. Since the solution is optimal we cannot improve. If the item is not, we can replace with other items and improve or stay the same, again the solution is optimal so the result can only stay the same. Therefore such replacement will result in an optimal solution:"
    ]
   },
   {
@@ -213,13 +215,15 @@
     "\n",
     "This problem can be solved using Dynamic Programming, but for many cases (called [canonical coin systems](https://graal.ens-lyon.fr/~abenoit/algo09/coins2.pdf) greedy approach works as well. Many modern coin systems, such as EUR, GBP or USD are canonical. \n",
     "\n",
-    "**Optimal substructure** Try to imagine the following: each solution to the problem for given amount of money \\\\(W\\\\) can be represented as a sorted (non-increasing) seqence of coin denominations which sums up to \\\\(W\\\\). Now let \\\\(coins(n,w)\\\\) denote the *minimum* number of coins needed to return \\\\(W\\\\), using the first \\\\(n\\\\) coin denominations. Optimal substructure is exhibited in the following equation:\n",
+    "**Optimal substructure** Try to imagine the following: each solution to the problem for given amount of money $W$ can be represented as a sorted (non-increasing) seqence of coin denominations which sums up to $W$. Now let $coins(n,w)$ denote the *minimum* number of coins needed to return $W$, using the first $n$ coin denominations. Optimal substructure is exhibited in the following equation:\n",
     "\n",
-    "\\\\[coins(n,w) = min(1 + coins(n, W-c_n),coins(n-1, W))\\\\]\n",
     "\n",
-    "Where \\\\(c_n\\\\) is the vaule of the \\\\(n\\\\)th coin.\n",
+    "$$coins(n,w) = min(1 + coins(n, W-c_n),coins(n-1, W))$$\n",
     "\n",
-    "**Greedy approach** We will we be supplying the coin of the greatest denomination until it is possible (the amount left remains non-negative) and then we will continue to smaller denominations until completion. The proof that this is optimal is beyond the scope of this course. However, you might think of a simplified case when coin denominations are consecutive powers of a positive integer \\\\(c\\\\) greater than \\\\(1\\\\) so \\\\(c^0,c^1,c^2,c^3...\\\\). The proof should be challenging in this case. Feel free to give it a go!"
+    "\n",
+    "Where $c_n$ is the vaule of the $n$th coin.\n",
+    "\n",
+    "**Greedy approach** We will we be supplying the coin of the greatest denomination until it is possible (the amount left remains non-negative) and then we will continue to smaller denominations until completion. The proof that this is optimal is beyond the scope of this course. However, you might think of a simplified case when coin denominations are consecutive powers of a positive integer $c$ greater than $1$ so $c^0,c^1,c^2,c^3...$. The proof should be challenging in this case. Feel free to give it a go!"
    ]
   },
   {
@@ -270,11 +274,13 @@
     "````{admonition} Answer\n",
     ":class: dropdown\n",
     "\n",
-    "The greedy approach pairs the holes with mice by their order in the sorted arrays. Let \\\\(m_1 < m_2\\\\) and \\\\(h1 < h2 \\\\). We will look for the longest mouse-hole distance as this will be our anwser. Clearly:\n",
+    "The greedy approach pairs the holes with mice by their order in the sorted arrays. Let $m_1 < m_2$ and $h1 < h2 $. We will look for the longest mouse-hole distance as this will be our anwser. Clearly:\n",
     "\n",
-    "\\\\[ max(|m_1 - h_1|, |m_2 - h_2|) < max(|m_1 - h_2|, |m_2 - h_1|) \\\\]\n",
     "\n",
-    "as \\\\(|m_1 - h_2|\\\\) is the longest of all four. We can therefore make any mice-holes assignment better by a series of swaps until it is sorted. This leads to an optimal solution.\n",
+    "$$ max(|m_1 - h_1|, |m_2 - h_2|) < max(|m_1 - h_2|, |m_2 - h_1|) $$\n",
+    "\n",
+    "\n",
+    "as $|m_1 - h_2|$ is the longest of all four. We can therefore make any mice-holes assignment better by a series of swaps until it is sorted. This leads to an optimal solution.\n",
     "\n",
     "```python\n",
     "def miceToHoles(mice, holes):\n",
@@ -339,7 +345,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -353,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
