--- a/notebooks/b_coding/Fundamentals of Computer Science/6_Data_Structures.ipynb
+++ b/notebooks/b_coding/Fundamentals of Computer Science/6_Data_Structures.ipynb
@@ -16,9 +16,9 @@
     "```\n",
     "Arrays are lists of objects. In some programming languages, arrays are objects of fixed length and have a type (e.g. list of 10 integers). In Python, are implemented using `list`s, which provide a little more flexibility by hosting multiple types and variable length. Arrays/lists support the following operation in complexity:\n",
     "\n",
-    "* Set item (at index i smaller than the length): \\\\(O(1)\\\\)\n",
-    "* Get item: \\\\(O(1)\\\\)\n",
-    "* Deletion is no really supported as we assume that the array is of fixed length, for Python lists it is \\\\(O(n)\\\\).\n",
+    "* Set item (at index i smaller than the length): $O(1)$\n",
+    "* Get item: $O(1)$\n",
+    "* Deletion is no really supported as we assume that the array is of fixed length, for Python lists it is $O(n)$.\n",
     "\n",
     "Arrays are used in many programming problems where collections of data show up."
    ]
@@ -101,8 +101,8 @@
    "metadata": {},
    "source": [
     "Operations/complexity:\n",
-    "* push: \\\\(O(1)\\\\)\n",
-    "* pop: \\\\(O(1)\\\\)\n",
+    "* push: $O(1)$\n",
+    "* pop: $O(1)$\n",
     "\n",
     "One of popular problems utilizing stacks is checking whether an expression has balanced brackets. Let us limit ourselves to expressions consisting of `[{,},(,)]`. We will push the opening brackets on the stack and pop them when the closing bracket is approached. Of course, the types of brackets must match:"
    ]
@@ -160,7 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following algorithm has \\\\(O(n)\\\\) time and space complexity."
+    "The following algorithm has $O(n)$ time and space complexity."
    ]
   },
   {
@@ -305,7 +305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All of these operations (`insert`,`remove`,`search`) take \\\\(O(n)\\\\) which is usually not optimal. There are numerous versions of linked lists e.g. doubly linked list which has nodes that point both to the previous and next nodes. Linked lists are often used to implement other data structures such as queues."
+    "All of these operations (`insert`,`remove`,`search`) take $O(n)$ which is usually not optimal. There are numerous versions of linked lists e.g. doubly linked list which has nodes that point both to the previous and next nodes. Linked lists are often used to implement other data structures such as queues."
    ]
   },
   {
@@ -399,7 +399,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With this implementation `enqueue` and `dequeue` are \\\\(O(1)\\\\). Queues are used in numerous problems, such as graph traversals (BFS). "
+    "With this implementation `enqueue` and `dequeue` are $O(1)$. Queues are used in numerous problems, such as graph traversals (BFS). "
    ]
   },
   {
@@ -474,7 +474,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Node removal is a bit more involved and will not be covered. All basic operations can be done in \\\\(O(log(n))\\\\). BST can be used to speed up many problems that require repetitive searching of the data. Consider the following problem:\n",
+    "Node removal is a bit more involved and will not be covered. All basic operations can be done in $O(\\log(n))$. BST can be used to speed up many problems that require repetitive searching of the data. Consider the following problem:\n",
     "\n",
     "**Numbers smaller than the given number in an array** You are given an array of integers. You should provide a data structure which should return the number of elements smaller than any chosen element in the array.\n",
     "\n",
@@ -548,7 +548,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This algorithm will work in \\\\(O(log(n))\\\\) time on average. However, of the array was initially sorted the formed tree will be degenerate (it will form a linked list). We will learn how to solve such cases in AVL trees."
+    "This algorithm will work in $O(\\log(n))$ time on average. However, of the array was initially sorted the formed tree will be degenerate (it will form a linked list). We will learn how to solve such cases in AVL trees."
    ]
   },
   {
@@ -648,7 +648,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Heaps have many, many uses. One of such is HeapSort - a \\\\(O(nlog(n))\\\\) sorting algorithm (see above). Heaps are also used in *priority queues* - queues which have the elements sorted by some *priority* such as objects sorted by their value. "
+    "Heaps have many, many uses. One of such is HeapSort - a $O(n\\log(n))$ sorting algorithm (see above). Heaps are also used in *priority queues* - queues which have the elements sorted by some *priority* such as objects sorted by their value. "
    ]
   },
   {
@@ -665,7 +665,7 @@
     ":width: 40%\n",
     "```\n",
     "\n",
-    "This tree is *degenerate*. Search operations are \\\\(O(n)\\\\) which is too slow for many implementations. To counter the degeneration we can utilize *self-balancing binary trees* such as the AVL tree (named after  Adelson-Velsky and Landis). This type of tree holds the invariant that for each node the difference in heights between left and right subtree is at most 1. Let us see how it is achieved.\n",
+    "This tree is *degenerate*. Search operations are $O(n)$ which is too slow for many implementations. To counter the degeneration we can utilize *self-balancing binary trees* such as the AVL tree (named after  Adelson-Velsky and Landis). This type of tree holds the invariant that for each node the difference in heights between left and right subtree is at most 1. Let us see how it is achieved.\n",
     "\n",
     "### AVL insertion\n",
     "\n",
@@ -831,7 +831,7 @@
     "## Hash Table\n",
     "```{index} Hash Table\n",
     "```\n",
-    "In simple terms, a hash table is identical to Python `dict` dictionaries. They allow us to retrieve objects (given their key) in \\\\(O(1)\\\\) time *on average*. They also allow for constant time insertion and deletion. Wait, what? Does it mean that they are ultimately the fastest data structures? - as you can probably guess it is not that simple. It will become clear as we will implement a simple hash table:\n",
+    "In simple terms, a hash table is identical to Python `dict` dictionaries. They allow us to retrieve objects (given their key) in $O(1)$ time *on average*. They also allow for constant time insertion and deletion. Wait, what? Does it mean that they are ultimately the fastest data structures? - as you can probably guess it is not that simple. It will become clear as we will implement a simple hash table:\n",
     "\n",
     "A hash table is similar to an array. It has some fixed capacity which can be changed (not in constant time). The elements are indexed by the key values. For the hash table to work, the elements need to be indexed by integer values. A special function, called the *hash function* transforms the key values to integers. The basic utilities needed by a hash table are shown in the class below:"
    ]
@@ -885,7 +885,7 @@
     "\n",
     "`h(key) = floor(table_size * (key * c - floor(key * c)))`\n",
     "\n",
-    "Both of these functions can lead to inefficient hash tables with operations with \\\\(O(n)\\\\) worst-case time. There are more advanced methods which solve this problem, which you are free to research [here](https://en.wikipedia.org/wiki/List_of_hash_functions).\n",
+    "Both of these functions can lead to inefficient hash tables with operations with $O(n)$ worst-case time. There are more advanced methods which solve this problem, which you are free to research [here](https://en.wikipedia.org/wiki/List_of_hash_functions).\n",
     "\n",
     "### Overlaps\n",
     "\n",
@@ -893,7 +893,7 @@
     "\n",
     "### Doubling\n",
     "\n",
-    "Let `n` denote the number of elements in the hash table. The *load factor* is defined as `n / table_size`. As our table becomes more filled more cells (on average) become linked lists. To counter this effect we will double the size of the table when the load factor reaches a certain value (in our case \\\\(1\\\\)). We will not support deletion therefore shrinking is not essential.\n",
+    "Let `n` denote the number of elements in the hash table. The *load factor* is defined as `n / table_size`. As our table becomes more filled more cells (on average) become linked lists. To counter this effect we will double the size of the table when the load factor reaches a certain value (in our case $1$). We will not support deletion therefore shrinking is not essential.\n",
     "\n",
     "With all this knowledge let us provide an implementation:"
    ]
@@ -1016,7 +1016,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1030,7 +1030,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
